Add attributes to and simplify adapters

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,9 +109,5 @@ rest_framework = ["rest_framework"]
 fixture-parentheses = false
 parametrize-names-type = "csv"
 
-[tool.typos] # Ref: https://github.com/crate-ci/typos/blob/master/docs/reference.md
-# add "spellchecker:disable-line" to ignore specific lines
-default.extend-ignore-re = [
-  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$", # for .py files
-  "(?Rm)^.*<!-- spellchecker:disable-line -->$", # for .html files
-]
+[tool.typos.default.extend-words]
+ein = "ein"
